# fat

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  boot_record.cc  boot_record.h  directory.cc  directory.h  example_disk.h  format.h  make_disk.py  test.cc
src/directory/: raw.cc  raw.h
